services/cub/1.0.0/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: welcomeglobal-stripprefixes
  namespace: kommander-flux
spec:
  stripPrefix:
    prefixes:
    - /welcome
